2000-08-03  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/big5.c: Updated.
	Patch by Tung-Han Hsieh <thhsieh@twcpro.phys.ntu.edu.tw>.

2000-08-02  Ulrich Drepper  <drepper@redhat.com>

	* Makeconfig (all-subdirs): Add conform.
	* conform/Makefile: Include ../Rules.

	* Makefile (README): Add rules to generate here as well.

2000-08-02  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.1.92.

	* sysdeps/ia64/Dist: Add _mcount.S.

	* sysdeps/unix/sysv/linux/ia64/Dist: Add clone.S.

	* sysdeps/unix/sysv/linux/mips/Dist: Add _test_and_set.c.

	* elf/Makefile (distribute): Add missing modules.

	* sysdeps/unix/sysv/linux/s390/Dist: Remove nonexisting files.

	* posix/regex.c (compile_range): Transliate range start and end
	characters to avoid empty range in case of REG_ICASE [PR libc/1842].

	* sysdeps/unix/sysv/linux/ia64/bits/resource.h: Don't include
	asm/resource.h.

	* sysdeps/unix/sysv/linux/arm/Makefile: Undo last change.

2000-08-02  Andreas Jaeger  <aj@suse.de>

	* elf/elf.h (EM_S390): Added.
	(R_390_*): New relocs for S390.

	* sysdeps/unix/sysv/linux/s390/Dist: New file.
	* sysdeps/unix/sysv/linux/s390/sysdep.h: New file.
	* sysdeps/unix/sysv/linux/s390/sysdep.S: New file.
	* sysdeps/unix/sysv/linux/s390/syscall.S: New file.
	* sysdeps/unix/sysv/linux/s390/sys/user.h: New file.
	* sysdeps/unix/sysv/linux/s390/sys/ucontext.h: New file.
	* sysdeps/unix/sysv/linux/s390/sys/ptrace.h: New file.
	* sysdeps/unix/sysv/linux/s390/sys/elf.h: New file.
	* sysdeps/unix/sysv/linux/s390/socket.S: New file.
	* sysdeps/unix/sysv/linux/s390/sigcontextinfo.h: New file.
	* sysdeps/unix/sysv/linux/s390/shmctl.c: New file.
	* sysdeps/unix/sysv/linux/s390/setreuid.c: New file.
	* sysdeps/unix/sysv/linux/s390/setresuid.c: New file.
	* sysdeps/unix/sysv/linux/s390/setresgid.c: New file.
	* sysdeps/unix/sysv/linux/s390/setregid.c: New file.
	* sysdeps/unix/sysv/linux/s390/setgroups.c: New file.
	* sysdeps/unix/sysv/linux/s390/setgid.c: New file.